# GQL

./: .gitignore  GQL.cabal  LICENCE  flake.nix  shell.nix
src/GQL/: AST.hs  Arbitrary.hs  Lexer.hs  Parser.hs  Pretty.hs
test/: Test.hs
