cabal-version:      3.0
name:               GQL
version:            0.1.0.0
synopsis:           A Haskell EDSL for Graph Query Language

-- A longer description of the package.
-- description:
homepage:           https://github.com/ners/GQL

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files: CHANGELOG.md

library
    exposed-modules:  GQL.AST,
                      GQL.Lexer,
                      GQL.Parser,
                      GQL.Arbitrary,
                      GQL.Pretty,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        generic-arbitrary,
        megaparsec,
        QuickCheck,
        parser-combinators,
        prettyprinter,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable GQL
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        GQL,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite GQL-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:
        GQL,
        QuickCheck,
        base,
        megaparsec,
        pretty-simple,
        prettyprinter,
        text
